# langchain-jina

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: late_chunk.ipynb  latechunking_embeding.ipynb
langchain_jina/: __init__.py  embeddings.py
langchain_jina/vectorestores/: qdrant.py
scripts/: lint_imports.sh
tests/integration_tests/: test_embedings.py  test_latechunkqdrant.py
