[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-jina"
version = "0.0.1.dev0"
description = "An integration package connecting Jina Late Chunking and LangChain"
authors = ["tien.ngnvan@gmail.com"]  # Author field
maintainers = ["tien.ngnvan@gmail.com"]  # Maintainer field added
readme = "README.md"
repository = "https://github.com/tien-ngnvan/langchain-jina"
license = "MIT"

[tool.mypy]
disallow_untyped_defs = "True"

packages = [
      { include = "langchain_jina" }
]

[tool.poetry.urls]
"Source Code" = "https://github.com/tien-ngnvan/langchain-jina"
"Release Notes" = "https://github.com/tien-ngnvan/langchain-jina/releases"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain-core = "^0.3.15"
langchain-text-splitters = "^0.3.5"
langchain-community = "^0.3.5"
SQLAlchemy = ">=1.4,<2.0.36"
numpy = ">=1.26.4,<2.0"
langsmith = "<0.2.0,>=0.1.125"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-socket = "^0.7.0"
pytest-watcher = "^0.3.4"
langchain-tests = "^0.3.5"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.6"

[tool.poetry.group.test_integration.dependencies]

[tool.poetry.group.lint.dependencies]
ruff = "^0.5"

[tool.poetry.group.typing.dependencies]
mypy = "^1.10"